--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -27,6 +27,8 @@ jobs:
       run: ruby -v
     - name: bundle install
       run: bundle install
+    - name: gem install rake -v 13.1.0
+      run: gem list
     - name: gem list
       run: gem list
     - name: cat Gemfile.lock
